--- a/movies/templates/movies/detail.html
+++ b/movies/templates/movies/detail.html
@@ -4,15 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Movies</title>
+    <title>Movie</title>
   </head>
   <body>
-    <h1>Movies</h1>
-    <ul>
-      {% for movie in movies %}
-      <li><a href="{{movie.id}}"> {{movie.title}}</a></li>
-      {% endfor %}
-    </ul>
-    <a href="/movies/add">Add a movie</a>
+    <h1>{{movie}}</h1>
   </body>
 </html>
